# iam_accelerator

./: .gitignore  README.md  pyproject.toml
analyzers/: __init__.py  permission_mapper.py  remediation_planner.py  risk_scorer.py
auditors/: __init__.py  aws_auditor.py  azure_auditor.py  base_auditor.py
data/samples/: aws_iam_sample.json  azure_rbac_sample.json
output/: iam_report.html  iam_report.json
reporters/: __init__.py  executive_report.py
reporters/templates/: report_template.html
terraform/aws/: main.tf  outputs.tf  variables.tf
terraform/azure/: main.tf  outputs.tf  variables.tf
tests/: test_aws_auditor.py  test_report.py  test_risk_scorer.py
