[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iam-accelerator"
version = "1.0.0"
description = "Multi-Cloud IAM Strategy Accelerator — audit, score, and remediate IAM risk across AWS and Azure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "boto3>=1.34",
    "azure-identity>=1.16",
    "azure-mgmt-authorization>=4.0",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["auditors", "analyzers", "reporters"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["auditors", "analyzers", "reporters"]
